# NBA_Statistics

./: .gitignore  colab.ipynb  pyproject.toml
airflow/: .gitignore  Dockerfile  README.md  docker-compose.yml  packages_list.txt  pyproject.toml
airflow/dags/: dbt.py  load.py  player_test copy.ipynb  player_test.ipynb  selenium_session.py  stathead_data_extraction.py  test.ipynb  test_selenium.py
airflow/dags/advanced/: dbt_advanced.py
airflow/database/: postmaster.pid
airflow/database/base/1/: 2619
airflow/database/base/13780/: pg_internal.init
airflow/database/base/16384/: 1247  1247_fsm  1249  1259  1259_fsm  16385  16385_vm  16386  16386_fsm  16388  16390  16391  16392  16394  16395  16396  16397  16398  16398_vm  16399  16399_fsm  16399_vm  16403  16404  16406  16407  16408  16409  16410  16412  16413  16415  16416  16418  16420  16421  16422  16424  16425  16425_vm  (+324 more)
airflow/database/global/: 1260  1262  2671  2672  pg_control  pg_internal.init
airflow/database/pg_stat/: db_0.stat  db_13780.stat  db_16384.stat  global.stat
airflow/database/pg_stat_tmp/: db_0.stat  db_13780.stat  db_16384.stat  global.stat
airflow/database/pg_xact/: 0000
airflow/logs/scheduler/: latest
dags/basic/: dbt_basics.py
dbt/: dbt_project.yml  manifest.json  profiles.yml
dbt/models/example/: first_model.sql
dbt_nba/: .user.yml  dbt_project.yml  profiles.yml  scrap.ipynb
dbt_nba/models/example/: dim_player_infos.sql  dim_team_infos.sql  fact_player_logs.sql  fact_ranking_logs.sql  fact_team_logs.sql  my_second_dbt_model.sql  schema.yml
