[tool.poetry]
name = "nba-statistics"
version = "0.1.0"
description = ""
authors = ["Louis Duvieux <lduvieux@laposte.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^4.15.2"
webdriver-manager = "^4.0.1"
chromedriver-py = "^119.0.6045.105"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
