[tool.poetry]
name = "02-DBT-in-Airflow"
version = "0.1.0"
description = "Data engineering bootcamp by Le Wagon"
authors = ["S. Saunier <seb@lewagon.org>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
apache-airflow = "2.7.3"
psycopg2-binary = "^2.9.3"
pandas = "^1.4.2"
pyarrow = "^8.0.0"
apache-airflow-providers-postgres = "4.1.0"
dbt-core = "^1.1.1"
dbt-bigquery = "^1.1.0"
apache-airflow-providers-google = "^10.11.0"

[tool.poetry.dev-dependencies]
pytest = "7.1.2"
pytest-mock = "3.2.0"
pytest-responses = "0.4.0"
pendulum = "^2.1.2"
testfixtures = "^6.18.5"
apache-airflow-providers-sqlite = "^2.1.3"
dockerfile = "^3.2.0"
black = "^22.3.0"
PyYAML = "^6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 160
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 160
multi_line_output = 3
include_trailing_comma = true

[tool.pytest.ini_options]
markers = ["optional: not required, nor saved in test_output.txt"]

[virtualenvs]
in-project = true
